--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -2,9 +2,26 @@
 title: Introduction to primitives
 description: Introduction to primitives in Qiskit and Qiskit Runtime, and an explanation of available primitives
 
+
 ---
 
 # Introduction to primitives
+
+<span id="qpu-access-patterns"></span>
+## Why did Qiskit introduce primitives?
+
+Similar to the early days of classical computers, when developers had to manipulate CPU registers directly, the early interface to QPUs simply returned the raw data from the control electronics.
+This was not a big issue when QPUs lived in labs and only allowed direct access by researchers.
+Acknowledging that most developers would not and should not be familiar with distilling such raw data into 0s and 1s, Qiskit introduced `backend.run`, a first abstraction for accessing QPUs in the cloud. This allowed developers
+to operate on a familiar data format and focus on the bigger picture.
+
+As access to QPUs became more widespread, and with more quantum algorithms being developed,
+again the need for a higher-level abstraction emerged. In response, Qiskit introduced
+the primitives interface, which is optimized for two core tasks in quantum algorithm development:
+expectation value estimation (`Estimator`) and circuit sampling (`Sampler`). The goal is once
+again to help developers to focus more on innovation and less on data conversion. The primitives interface supersedes the `backend.run` interface, since `Sampler` provides the same direct hardware access that was offered by `backend.run`.
+
+## What is a primitive?
 
 Computing systems are built on multiple layers of abstraction. Abstractions allow you to focus on a
 particular level of detail relevant to the task at hand. The closer you get to the hardware,
