Change handling of backend/instance

--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -20,8 +20,11 @@
    "outputs": [],
    "source": [
     "# This cell is hidden from users\n",
-    "# It stops the linter complaining about undefined variables\n",
-    "# ruff: noqa: F821"
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
+    "service = QiskitRuntimeService()\n",
+    "instance = service.active_account()[\"instance\"]\n",
+    "backend_name = service.least_busy(operational=True, min_num_qubits=16).name"
    ]
   },
   {
@@ -115,8 +118,7 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog()\n",
-    "function = catalog.load(\"qunova/hivqe-chemistry\")\n",
-    "instance = \"\"  # replace this with your authenticated instance string"
+    "function = catalog.load(\"qunova/hivqe-chemistry\")"
    ]
   },
   {
@@ -303,7 +305,9 @@
     "# Run HI-VQE\n",
     "job = function.run(\n",
     "    geometry=geometry,\n",
-    "    backend_name=\"ibm_marrakesh\",  # can use any device with at least 16 qubits\n",
+    "    # `backend_name` is the name of a backend with at least 16 qubits, for example, \"ibm_marrakesh\".\n",
+    "    backend_name=backend_name,\n",
+    "    # `instance` is your authenticated instance string, for example, \"ibm-q/open/main\" for the open plan\n",
     "    instance=instance,\n",
     "    max_states=2000,\n",
     "    max_expansion_states=10,\n",
@@ -474,6 +478,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "294a02cfa0c3",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users\n",
+    "backend_name = service.least_busy(operational=True, min_num_qubits=38).name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8c998f54",
    "metadata": {},
    "outputs": [],
@@ -499,7 +518,7 @@
     "    # Run HI-VQE\n",
     "    job = function.run(\n",
     "        geometry=Li2S_geoms[geom],\n",
-    "        backend_name=\"ibm_marrakesh\",  # can use any device with at least 38 qubits\n",
+    "        backend_name=backend_name,  # can use any device with at least 38 qubits\n",
     "        instance=instance,\n",
     "        max_states=2000,\n",
     "        max_expansion_states=10,\n",
@@ -582,7 +601,7 @@
    "source": [
     "job = function.run(\n",
     "    geometry=geometry,  # same 16-qubit NH3 geometry from earlier\n",
-    "    backend_name=\"ibm_marrakesh\",\n",
+    "    backend_name=backend_name,\n",
     "    instance=instance,\n",
     "    max_states=2000,\n",
     "    max_expansion_states=15,\n",
