--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -66,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "da02c7ca-803a-4426-8dd0-bbe062c0e9e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<RuntimeJob('cyr5kzfy9d80008d21cg', 'sampler')>,\n",
-       " <RuntimeJob('cyr5jgtmjve0008bvfk0', 'estimator')>,\n",
-       " <RuntimeJob('cyr5hppx46r000846dq0', 'estimator')>]"
+       "[<RuntimeJobV2('cyvmdrzq5bwg0083s75g', 'sampler')>,\n",
+       " <RuntimeJobV2('cyvm51cy2gd000889ap0', 'sampler')>,\n",
+       " <RuntimeJobV2('cysv714jj6dg008e4vk0', 'estimator')>]"
       ]
      },
      "execution_count": 1,
@@ -115,18 +115,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5339/3090032923.py:4: DeprecationWarning: In a future release of qiskit-ibm-runtime no sooner than 3 months after the release date of 0.30.0, RuntimeJob.status() will be returned as a string instead of an instance of `JobStatus`. To prepare for this change, you can use the idiom `status.name if isinstance(status, JobStatus) else status`.\n",
-      "  j for j in service.jobs(limit=1000) if j.status().name == \"DONE\"\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cyr5kzfy9d80008d21cg\n"
+      "cyvmdrzq5bwg0083s75g\n"
      ]
     }
    ],
@@ -134,7 +126,7 @@
     "# Get ID of most recent successful job for demonstration.\n",
     "# This will not work if you've never successfully run a job.\n",
     "successful_job = next(\n",
-    "    j for j in service.jobs(limit=1000) if j.status().name == \"DONE\"\n",
+    "    j for j in service.jobs(limit=1000) if j.status() == \"DONE\"\n",
     ")\n",
     "job_id = successful_job.job_id()\n",
     "print(job_id)"
@@ -149,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "PrimitiveResult([SamplerPubResult(data=DataBin(c=BitArray(<shape=(), num_shots=4000, num_bits=35>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2025-02-15 09:10:26', stop='2025-02-15 09:10:51', size=4000>), SliceSpan(<start='2025-02-15 09:10:26', stop='2025-02-15 09:10:47', size=32768>)])}, 'version': 2})"
+       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=4096, num_bits=127>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2025-02-20 15:14:47', stop='2025-02-20 15:15:00', size=4096>)])}, 'version': 2})"
       ]
      },
      "execution_count": 3,
@@ -216,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "PrimitiveResult([SamplerPubResult(data=DataBin(c=BitArray(<shape=(), num_shots=4000, num_bits=35>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}}), SamplerPubResult(data=DataBin(c0=BitArray(<shape=(), num_shots=2048, num_bits=127>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2025-02-15 09:10:26', stop='2025-02-15 09:10:51', size=4000>), SliceSpan(<start='2025-02-15 09:10:26', stop='2025-02-15 09:10:47', size=32768>)])}, 'version': 2})"
+       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(), num_shots=4096, num_bits=127>)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2025-02-20 15:14:47', stop='2025-02-20 15:15:00', size=4096>)])}, 'version': 2})"
       ]
      },
      "execution_count": 5,
@@ -237,7 +229,7 @@
  "metadata": {
   "description": "Store Qiskit objects on disk or in the cloud so you can continue where you left off",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "qiskit-docs-test-2.0",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "Save and retrieve Qiskit objects"
  },
