--- a/docs/guides/transpiler-plugins.ipynb
+++ b/docs/guides/transpiler-plugins.ipynb
@@ -409,7 +409,7 @@
  "metadata": {
   "description": "How to install and use transpiler plugins in Qiskit.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test-2.0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -423,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Install and use transpiler plugins"
  },
