--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -305,7 +305,7 @@
  "metadata": {
   "description": "The default settings and configuration options for quantum circuit transpilation in the Qiskit SDK.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test-2.0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Transpilation defaults and configuration options"
  },
