--- a/docs/guides/dynamical-decoupling-pass-manager.ipynb
+++ b/docs/guides/dynamical-decoupling-pass-manager.ipynb
@@ -297,7 +297,7 @@
  "metadata": {
   "description": "How to create a pass manager for dynamical decoupling in Qiskit.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test-2.0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -311,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Create a pass manager for dynamical decoupling"
  },
