--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -356,7 +356,7 @@
  "metadata": {
   "description": "Use fractional gates to execute single- and two-qubit rotations",
   "kernelspec": {
-   "display_name": "qiskit-docs-test-2.0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Fractional gates"
  },
