--- a/docs/guides/transpile-with-pass-managers.ipynb
+++ b/docs/guides/transpile-with-pass-managers.ipynb
@@ -348,7 +348,7 @@
   "celltoolbar": "Raw Cell Format",
   "description": "How to transpile quantum circuits using pass managers in Qiskit.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test-2.0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Transpile with pass managers"
  },
