--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -488,7 +488,7 @@
   "celltoolbar": "Raw Cell Format",
   "description": "The default stages of the quantum circuit transpilation pipeline in Qiskit.",
   "kernelspec": {
-   "display_name": "qiskit-docs-test-2.0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Transpiler stages",
   "widgets": {
