--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -37,7 +37,7 @@ The _cost limit_ or _instance limit_ refers to the total cost of all jobs run wi
 
 An instance administrator can limit how much is spent. There are several ways to set or change this limit:
 
-* **IBM Quantum Platform**: Click the main menu icon in the upper left corner and choose **Administration**. Open the [Instances & allocation tab.](https://quantum.cloud.ibm.com/admin/instances) Find the instance you want to limit, click the overflow menu at the end of the row, then click **Edit details**. Set the total cost limit or the usage (in seconds), then click **Save changes**.
+* **IBM Quantum Platform**: Click the main menu icon in the upper left corner and choose **Administration**. Open the [Instances & allocation tab.](https://quantum.cloud.ibm.com/admin/instances) Find the instance you want to limit, click the overflow menu at the end of the row, then click **Edit details**. Set the total cost limit or the usage limit, then click **Save changes**.
    <Admonition type = "note">
    You can also set the cost or usage limit when creating a new Standard Plan instance.
    </Admonition>
@@ -93,6 +93,8 @@ An instance administrator can limit how much is spent. There are several ways to
 ## View the cost limit or instance limit
 
 There are several ways to view the current cost limit:
+
+* * **IBM Quantum Platform**: Click the main menu icon in the upper left corner and choose **Administration**. The Max cost limit is shown on the Standard tab of the [Instances & allocation tab.](https://quantum.cloud.ibm.com/admin/instances)
 
 * **API**:
    * New IBM Quantum Platform users: [`GET /v1/instances/configuration`](/api/qiskit-runtime-rest/tags/instances).
