--- a/docs/api/qiskit-addon-mpf/backends-tenpy-layers-layerwise-evolver.mdx
+++ b/docs/api/qiskit-addon-mpf/backends-tenpy-layers-layerwise-evolver.mdx
@@ -8,12 +8,12 @@ python_api_name: qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver
 
 # LayerwiseEvolver
 
-<Class id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.2/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L23-L171" signature="LayerwiseEvolver(evolution_state, layers, *args, **kwargs)" modifiers="class">
+<Class id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.3/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L23-L179" signature="LayerwiseEvolver(evolution_state, layers, *args, **kwargs)" modifiers="class">
   Bases: [`TEBDEvolver`](backends-tenpy-tebd-tebd-evolver "qiskit_addon_mpf.backends.tenpy_tebd.evolver.TEBDEvolver")
 
   A special case of the [`TEBDEvolver`](backends-tenpy-tebd-tebd-evolver "qiskit_addon_mpf.backends.tenpy_tebd.TEBDEvolver") based on layer-wise evolution models.
 
-  As also explained in [`tenpy_layers`](backends-tenpy-layers#module-qiskit_addon_mpf.backends.tenpy_layers "qiskit_addon_mpf.backends.tenpy_layers"), this implementation extracts the alternating even/odd bond updates implemented inside of the original [`TEBDEngine`](https://tenpy.readthedocs.io/en/latest/reference/tenpy.algorithms.tebd.TEBDEngine.html#tenpy.algorithms.tebd.TEBDEngine "(in TeNPy v1.0.4)") to become the end users responsibility. It does so, by replacing the single Hamiltonian provided to the [`TEBDEvolver`](backends-tenpy-tebd-tebd-evolver "qiskit_addon_mpf.backends.tenpy_tebd.TEBDEvolver") instance with a sequence of [`LayerModel`](backends-tenpy-layers-layer-model "qiskit_addon_mpf.backends.tenpy_layers.LayerModel") instances. Every single instance of these encodes a single **layer** of interactions. These should enforce the alternating updates of even and odd bonds of the underlying tensor network.
+  As also explained in [`tenpy_layers`](backends-tenpy-layers#module-qiskit_addon_mpf.backends.tenpy_layers "qiskit_addon_mpf.backends.tenpy_layers"), this implementation extracts the alternating even/odd bond updates implemented inside of the original [`TEBDEngine`](https://tenpy.readthedocs.io/en/latest/reference/tenpy.algorithms.tebd.TEBDEngine.html#tenpy.algorithms.tebd.TEBDEngine "(in TeNPy v1.0.5)") to become the end users responsibility. It does so, by replacing the single Hamiltonian provided to the [`TEBDEvolver`](backends-tenpy-tebd-tebd-evolver "qiskit_addon_mpf.backends.tenpy_tebd.TEBDEvolver") instance with a sequence of [`LayerModel`](backends-tenpy-layers-layer-model "qiskit_addon_mpf.backends.tenpy_layers.LayerModel") instances. Every single instance of these encodes a single **layer** of interactions. These should enforce the alternating updates of even and odd bonds of the underlying tensor network.
 
   The motivation for this more complicated interface is that is provides a lot more flexbility and enables users to define custom Trotter product formulas rather than being limited to the ones implemented by TeNPy directly.
 
@@ -44,10 +44,10 @@ python_api_name: qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver
 
   ### calc\_U
 
-  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.calc_U" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.2/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L136-L171" signature="calc_U(order, delta_t, type_evo='real', E_offset=None)">
+  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.calc_U" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.3/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L144-L179" signature="calc_U(order, delta_t, type_evo='real', E_offset=None)">
     Calculates the local bond updates.
 
-    This adapts [`calc_U()`](https://tenpy.readthedocs.io/en/latest/reference/tenpy.algorithms.tebd.TEBDEngine.html#tenpy.algorithms.tebd.TEBDEngine.calc_U "(in TeNPy v1.0.4)") to work with the layer-wise implementation.
+    This adapts [`calc_U()`](https://tenpy.readthedocs.io/en/latest/reference/tenpy.algorithms.tebd.TEBDEngine.html#tenpy.algorithms.tebd.TEBDEngine.calc_U "(in TeNPy v1.0.5)") to work with the layer-wise implementation.
 
     **Parameters**
 
@@ -63,26 +63,30 @@ python_api_name: qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver
 
   ### evolve
 
-  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.evolve" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.2/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L62-L96" signature="evolve(N_steps, dt)">
+  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.evolve" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.3/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L62-L104" signature="evolve(N_steps, dt)">
     Perform a single time step of TEBD.
 
     **Parameters**
 
-    *   **N\_steps** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – should always be `1` in this case. See [`TEBDEngine`](https://tenpy.readthedocs.io/en/latest/reference/tenpy.algorithms.tebd.TEBDEngine.html#tenpy.algorithms.tebd.TEBDEngine "(in TeNPy v1.0.4)") for more details.
+    *   **N\_steps** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – should always be `1` for this time-evolver, otherwise an error will be raised (see below).
     *   **dt** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – the time-step to use.
 
     **Returns**
 
     The truncation error.
 
+    **Raises**
+
+    [**RuntimeError**](https://docs.python.org/3/library/exceptions.html#RuntimeError "(in Python v3.13)") – if `N_steps` is not equal to `1`.
+
     **Return type**
 
-    [*TruncationError*](https://tenpy.readthedocs.io/en/latest/reference/tenpy.linalg.truncation.TruncationError.html#tenpy.linalg.truncation.TruncationError "(in TeNPy v1.0.4)")
+    [*TruncationError*](https://tenpy.readthedocs.io/en/latest/reference/tenpy.linalg.truncation.TruncationError.html#tenpy.linalg.truncation.TruncationError "(in TeNPy v1.0.5)")
   </Function>
 
   ### suzuki\_trotter\_decomposition
 
-  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.suzuki_trotter_decomposition" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.2/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L115-L134" signature="suzuki_trotter_decomposition(order, N_steps)" modifiers="static">
+  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.suzuki_trotter_decomposition" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.3/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L123-L142" signature="suzuki_trotter_decomposition(order, N_steps)" modifiers="static">
     Returns an empty list.
 
     <Admonition title="Note" type="note">
@@ -105,7 +109,7 @@ python_api_name: qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver
 
   ### suzuki\_trotter\_time\_steps
 
-  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.suzuki_trotter_time_steps" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.2/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L98-L113" signature="suzuki_trotter_time_steps(order)" modifiers="static">
+  <Function id="qiskit_addon_mpf.backends.tenpy_layers.LayerwiseEvolver.suzuki_trotter_time_steps" github="https://github.com/Qiskit/qiskit-addon-mpf/tree/stable/0.3/qiskit_addon_mpf/backends/tenpy_layers/evolver.py#L106-L121" signature="suzuki_trotter_time_steps(order)" modifiers="static">
     Returns an empty list.
 
     <Admonition title="Note" type="note">
