--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -94,7 +94,7 @@ An instance administrator can limit how much is spent. There are several ways to
 
 There are several ways to view the current cost limit:
 
-* * **IBM Quantum Platform**: Click the main menu icon in the upper left corner and choose **Administration**. The Max cost limit is shown on the Standard tab of the [Instances & allocation tab.](https://quantum.cloud.ibm.com/admin/instances)
+* **IBM Quantum Platform**: Click the main menu icon in the upper left corner and choose **Administration**. The Max cost limit is shown on the Standard tab of the [Instances & allocation tab.](https://quantum.cloud.ibm.com/admin/instances)
 
 * **API**:
    * New IBM Quantum Platform users: [`GET /v1/instances/configuration`](/api/qiskit-runtime-rest/tags/instances).
