How to close an IBM Cloud account

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -93,9 +93,13 @@ The simulator models an ideal environment, without noise or decoherence. When jo
 
 <LegacyContent>
 ## How do I delete my account and data?
-
 To delete your account, go to your [account page](https://quantum.ibm.com/account#delete-account). Scroll to the Delete Account section, and click *Delete your account and account data*. You will receive an email with a link to delete your account.
 </LegacyContent>
+<CloudContent>
+## How do I close my IBM Cloud account?
+
+Find instructions on the [Closing an account](https://cloud.ibm.com/docs/account?topic=account-account-close) page.
+</CloudContent>
 ## Questions about cloud simulator retirement
 
 See the [migration guide](/migration-guides/local-simulators) for details on the retirement of cloud simulators, and how to migrate to local simulators.
